<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAdauga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_adauga"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDenumire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_denumire"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnAdauga"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_serie"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvDenumire"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvPret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pret"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvSerie"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_valid"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvPret"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvStare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_stare"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvValid"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_rating"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvStare"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTipSunet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_tip_sunet"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvRating"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>